# kompic-wearable

./: .gitignore  LICENSING.md  README.md
docs/: circuit.html  datasheets_manifest.md  fabrication.html  index.html  style.css
firmware/: CMakeLists.txt  partitions.csv  print_project_files.txt
firmware/components/boot_logic/: CMakeLists.txt  boot_power.c  boot_power.h  boot_tasks.c  boot_tasks.h
firmware/components/data_broker/: CMakeLists.txt  data_broker.c  data_broker.h  power_flags.h  ui_event.h
firmware/components/drv2605/: CMakeLists.txt  drv2605.c  drv2605.h  haptic.c  haptic.h  haptic_tile.c  haptic_tile.h
firmware/components/lvgl_ui/: CMakeLists.txt  fa5_select_14.c  lvgl_ui.c  lvgl_ui.h  system_tile.c  system_tile.h  tile_registry.c  tile_registry.h  ui_broker.c  ui_broker.h  ui_lock_screen.c  ui_lock_screen.h  ui_main_screen.c  ui_main_screen.h  ui_navigation.c  ui_navigation.h  ui_notif_overlay.c  ui_notif_overlay.h  ui_settings_screen.c  ui_settings_screen.h  ui_shutdown_overlay.c  ui_shutdown_overlay.h  ui_status_bar.c  ui_status_bar.h  ui_theme_colors.h
firmware/components/max30101/: CMakeLists.txt  health_tile.c  health_tile.h  max30101.c  max30101.h
firmware/docs/: 00_Claude_Code_Audit_Prompt.md  01_Kompic_Mk1_Firmware_System_Instructions_fw-iv1.md  02_Kompic_Mk1_System_Instructions_v7.1.md  03_Audit_Report.md  04_Blueprint_Architecture.md  05_Migration_Map.md  06_System_Audit_Sim_2026-06-11.md  10_KOMPIC_MK1_FIRMWARE_PORTING_MASTER_PROMPT.md  11_KICKOFF_CO5300_AMOLED_DISPLAY.md  12_OPUS_BATCH_INDEX.md  13_PHASE_0_BATCH_2_TOUCH_RTC.md  14_PHASE_1_BATCH_POWER_BATTERY.md  15_PHASE_2_BATCH_SENSORS_1.md  16_PHASE_3_BATCH_SENSORS_2.md  17_PHASE_4_BATCH_ACTUATORS.md  18_PHASE_5_BATCH_ADVANCED.md  19_PHASE_6_BATCH_INFRASTRUCTURE.md  20.00_Datasheet_Parser_Master_Prompt_iv7.1_f0.0.md  20.00_Datasheet_Parser_Master_Prompt_iv7.2_f0.0.md  20.01-20.05_KICKOFF_PHASE1_Display_Touch_Core.md  20.06-20.10_KICKOFF_PHASE2_Sensors_Bus1_PartA.md  20.11-20.13_KICKOFF_PHASE3_Sensors_Bus1_PartB_and_Charger.md  20.14-20.17_KICKOFF_PHASE4_Actuators_IO.md  20.18-20.20_KICKOFF_PHASE5_Peripherals_Misc.md  HOW_TO_USE_OPUS_INSTANCE.md
firmware/main/: CMakeLists.txt  idf_component.yml  lv_conf.h  main.c
firmware/test/: test_alarm.c  test_app_nvs.c  test_bme688.c  test_boot_power.c  test_bq25619.c  test_co5300.c  test_cross_driver.c  test_cst9217.c  test_data_broker.c  test_drv2605.c  test_encoder.c  test_flashlight.c  test_fusion.c  test_lis3mdl.c  test_lsm6dsv16x.c  test_lvgl_ui.c  test_max30101.c  test_max_m10s.c  test_mic_pdm.c  test_pcf85063.c  (+5 more)
(+233 files in other folders)
